PP-12365 add revoke tokens api
