# openapi/publicauth_spec.yaml
@@ -90,6 +90,34 @@ paths:
       summary: Updates the description of an existing dev token.
       tags:
       - Auth
+  /v1/frontend/auth/service/{serviceExternalId}/mode/{mode}:
+    delete:
+      operationId: revokeTokensForServiceAndMode
+      parameters:
+      - example: UPDATE
+        in: path
+        name: serviceExternalId
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: mode
+        required: true
+        schema:
+          type: string
+          enum:
+          - LIVE
+          - TEST
+      responses:
+        default:
+          content:
+            '*/*': {}
+          description: default response
+      summary: "Revokes all tokens associated with a service and mode. It is not possible\
+        \ to tell whether the service actually exists (in connector), so this method\
+        \ currently does not return a 404."
+      tags:
+      - Auth
   /v1/frontend/auth/{accountId}:
     delete:
       operationId: revokeSingleToken
